--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@
     font-family:'Poppins', sans-serif;
     color: #0A0A0A;
     font-size: 30px;
-    font-style: italic;
     font-weight: 900;
     padding-top:100px;
     padding-bottom:50px;
@@ -251,10 +250,10 @@
 
 .skillhead h1{
     font-family: 'Poppins', sans-serif;
-    color: #FFFFFF;
+    color: black;
     font-size: 30px;
     font-weight: 900;
-    padding-top:100px;
+    padding-top:20px;
     padding-bottom:20px;
 }
 
